tools: Fix property editor rendering input too big
The text input in our properties viewer was too wide and got a few
pixels rendered below the button in the next column of the table.

Fix that.

--- a/editors/vscode/css/content.css
+++ b/editors/vscode/css/content.css
@@ -60,6 +60,10 @@
     width: 100%;
 }
 
+.properties-editor .value-column-content {
+    display: flex;
+}
+
 .properties-editor .properties-table {
     width: 100%;
 }
